# prognozo

./: README.md
prognozo-app/: .dockerignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
prognozo-app/prognozo_app/: __init__.py  app.py  routes.py
prognozo-app/prognozo_app/static/: style.css
prognozo-app/prognozo_app/templates/: base.html  index.html
